--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>JS homework</title>
     <script src="./js/task-1.js" defer></script>
     <script src="./js/task-2.js" defer></script>
-    <script src="./js/task-3.js" defer></script>
   </head>
 
-  <body></body>
+  <body>
+    <script src="./js/task-3.js" type="module"></script>
+    <script src="./js/task-4.js" type="module"></script>
+  </body>
 </html>
